Tue Apr 12 12:47:58 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Sequence_Unit_Tests/bounded_object_reference_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/string_sequence_tester.hpp:
        * tests/Sequence_Unit_Tests/unbounded_object_reference_sequence_ut.cpp:

          The shallow-copy optimizations added to the sequence implementation
          changes the number of freebufs and releases that happen. The tests
          needed to be updated to reflect this new reality.

Tue Apr 12 08:03:01 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/tao_idl.mpc:
        * TAO_IDL/tao_idl_be.mpc:
          Enable again in cross build

Mon Apr 11 18:29:55 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/tao_idl.mpc:
        * TAO_IDL/tao_idl_be.mpc:
          Reverted the enabling of these projects with cross compilation for
          the moment

Mon Apr 11 10:48:49 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/MT_NoUpcall_Client_Leader/MT_NoUpcall.mpc:
          This test requires threads

Mon Apr 11 06:31:40 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/tao_idl_be.mpc:
          Added no-optimize-sibling-calls

Sun Apr 10 12:06:30 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Transport.cpp:
          Layout change

        * tests/IDL_Test/IDL_Test.mpc:
          Use ndds_cck_ts_defaults

Sat Apr  9 08:03:56 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/MT_NoUpcall_Client_Leader/chatter.h:
        * tests/MT_NoUpcall_Client_Leader/chatter.cpp:
          Unicode fixes

Fri Apr  8 17:59:09 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Resume_Handle_Deferred.h:
        * tao/Resume_Handle_Deferred.inl:
        * tao/Resume_Handle_Deferred.cpp:
          Added versioned namespace macros

Fri Apr  8 13:21:17 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/Array_Traits_T.h: